added some templates to add dynampic html

--- a/1-node-farm/starter/templates/product.html
+++ b/1-node-farm/starter/templates/product.html
@@ -275,22 +275,22 @@
           <span class="emoji-left">👈</span>Back
         </a>
         <div class="product__hero">
-          <span class="product__emoji product__emoji--1">{data.image}</span>
-          <span class="product__emoji product__emoji--2">{data.image}</span>
-          <span class="product__emoji product__emoji--3">{data.image}</span>
-          <span class="product__emoji product__emoji--4">{data.image}</span>
-          <span class="product__emoji product__emoji--5">{data.image}</span>
-          <span class="product__emoji product__emoji--6">{data.image}</span>
-          <span class="product__emoji product__emoji--7">{data.image}</span>
-          <span class="product__emoji product__emoji--8">{data.image}</span>
-          <span class="product__emoji product__emoji--9">{data.image}</span>
+          <span class="product__emoji product__emoji--1">{%IMAGE%}</span>
+          <span class="product__emoji product__emoji--2">{%IMAGE%}</span>
+          <span class="product__emoji product__emoji--3">{%IMAGE%}</span>
+          <span class="product__emoji product__emoji--4">{%IMAGE%}</span>
+          <span class="product__emoji product__emoji--5">{%IMAGE%}</span>
+          <span class="product__emoji product__emoji--6">{%IMAGE%}</span>
+          <span class="product__emoji product__emoji--7">{%IMAGE%}</span>
+          <span class="product__emoji product__emoji--8">{%IMAGE%}</span>
+          <span class="product__emoji product__emoji--9">{%IMAGE%}</span>
         </div>
-        <h2 class="product__name">{data.productName}</h2>
+        <h2 class="product__name">{%PRODUCTNAME%}</h2>
         <div class="product__details">
-          <p><span class="emoji-left">🌍</span> From {data.country}</p>
-          <p><span class="emoji-left">❤️</span>{data.productNutrientsName}</p>
-          <p><span class="emoji-left">📦</span> {data.quantity}</p>
-          <p><span class="emoji-left">🏷</span>{data.price}</p>
+          <p><span class="emoji-left">🌍</span> From {%FROM%}</p>
+          <p><span class="emoji-left">❤️</span>{%NUTRIENTS%}</p>
+          <p><span class="emoji-left">📦</span> {%QUANTITY%}</p>
+          <p><span class="emoji-left">🏷</span>{%PRICE%}</p>
         </div>
 
         <a href="#" class="product__link">
@@ -298,7 +298,7 @@
           <span>Add to shopping card (6.50€)</span>
         </a>
 
-        <p class="product__description">{data.description}</p>
+        <p class="product__description">{%DESCRIPTION%}</p>
       </figure>
     </div>
   </body>
